...
        android:text="Start Date/Time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/NewEvent"
        app:layout_constraintTop_toBottomOf="@+id/new_event_title_e" />

    <EditText
        android:id="@+id/new_event_start_time_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Start Date/Time"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/NewEvent"
...
        android:text="End Date/Time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/NewEvent"
        app:layout_constraintTop_toBottomOf="@id/new_event_start_time_e" />

    <EditText
        android:id="@+id/new_event_end_time_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="End Date/Time"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/NewEvent"
...
        android:text="Description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/NewEvent"
        app:layout_constraintTop_toBottomOf="@id/new_event_end_time_e" />

    <EditText
        android:id="@+id/new_event_description_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Description"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/NewEvent"
        app:layout_constraintTop_toBottomOf="@+id/new_event_description" />

    <Button
        android:id="@+id/btnCreateNewEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="#009688"
        android:text="Create"
        android:textSize="18sp"
...
