...
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="Event List"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EventListView"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/create_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Create Event"
        android:textSize="10dp"
        app:layout_constraintStart_toEndOf="@+id/EventList"
...
