...
        android:text="Event Title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EventDetailsOrganizer" />

    <EditText
        android:id="@+id/event_details_organizer_title_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Event Title"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/event_details_organizer_title"
        app:layout_constraintTop_toBottomOf="@id/event_details_organizer_title" />
...
            android:layout_margin="8sp"
            android:backgroundTint="#3F51B5"
            android:text="Send Announcement"
            app:layout_constraintTop_toBottomOf="@id/event_details_organizer_event_stats" />

        <Button
            android:id="@+id/btnViewAnnouncements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:backgroundTint="#3F51B5"
            android:text="View Announcements"
            app:layout_constraintTop_toBottomOf="@id/btnSendNotification"/>
...
